i amde the logo a logo

--- a/responsiveWebsite/home.css
+++ b/responsiveWebsite/home.css
@@ -18,6 +18,11 @@
     color: rgb(224, 0, 0);
 }
 
+.logo a{
+    text-decoration: none;
+    color: rgb(224, 0, 0);
+}
+
 hr{
     border: solid;
 }
