--- a/responsiveWebsite/home.css
+++ b/responsiveWebsite/home.css
@@ -9,18 +9,14 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 55px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 900;
-    font-style: italic;
-    margin-left: 15px;
+    grid-column: 1/2;
+    grid-row: 1/2;
     transform: scale(1, 0.9);
-    color: rgb(224, 0, 0);
 }
 
-.logo a{
-    text-decoration: none;
-    color: rgb(224, 0, 0);
+.logo img{
+    width: 300px;
+    height: 100%;
 }
 
 hr{
@@ -51,29 +47,33 @@ hr{
 .images img{
     margin-left: 15px;
     max-height: 270px;
+    height: 100%;
+    width: auto;
 }
 
 .images{
-    grid-column: 1/3;
+    grid-column: 1/4;
     display: flex;
     flex-wrap:nowrap;
     overflow-x: scroll;
+    width: 100%;
+    height: auto;
 }
 
 .images .price p{
     display: flex;
-    margin-left: 10px;
+    margin-left: 15px;
     font-size: 23px;
 }
 
 .images .star{
-    margin-left: 10px;
+    margin-left: 15px;
     margin-bottom: 10px;
 }
 
 .images .title a{
     display: flex;
-    margin-left: 10px;
+    margin-left: 15px;
     color: rgb(0, 93, 170);
     text-decoration: none;
 }
@@ -92,7 +92,7 @@ hr{
 
 .website{
     display: grid;
-    grid-template-columns: 250px 1fr;
+    grid-template-columns: 1fr 2fr 3fr;
 }
 
 .searchbar{
@@ -101,22 +101,25 @@ hr{
     align-items: center;
     margin: 20px;
     padding-left: 20px;
+    grid-column: 2/4;
 }
 
-input{
+.searchbar input{
     height: 30px;
     border-radius: 10px;
     padding: 8px;
     border: solid;
     border-color: rgb(0, 93, 170);
+    width: 100%;
 }
 
 .navbar{
-    grid-column: 1/3;
+    grid-column: 1/4;
+    min-width: 200px;
 }
 
 .featured{
-    grid-column: 1/3;
+    grid-column: 1/4;
     padding: 13px;
 }
 
@@ -124,7 +127,7 @@ input{
     display: flex;
     align-items: center;
     justify-content: center;
-    grid-column: 1/3;
+    grid-column: 1/4;
 }
 
 .title-image img{
@@ -133,16 +136,20 @@ input{
 }
 
 .membership-table{
-    display: flex;
-    padding: 20px;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-evenly;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 15px;
     grid-column: 1/3;
 }
 
 .membership-table img{
-    max-width: 400px;
+    max-width: 325px;
+}
+
+.membership-table .img{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .membership-table .table{
@@ -167,7 +174,7 @@ input{
 }
 
 .membership-table .table p{
-    font-size: 20px;
+    font-size: 19px;
     display: flex;
     align-items: center;
     margin: 10px;
@@ -175,14 +182,16 @@ input{
 
 .membership-table .executive{
     background-color: rgb(238, 238, 238);
-    border-radius: 25px;
     box-shadow: rgb(0, 0, 0);
+    grid-column: 1/2;
+    margin-right: 10px;
 }
 
 .membership-table .gold{
     background-color: rgb(238, 238, 238);
-    border-radius: 25px;
     box-shadow: rgb(0, 0, 0);
+    grid-column: 2/3;
+    margin-right: 10px;
 }
 
 .membership-table .grey{
@@ -190,15 +199,145 @@ input{
 }
 
 .membership-table .content{
-    padding: 30px;
+    padding: 20px;
+    padding-bottom: 5px;
 }
 
-@media(max-width: 1048px){
+.footer{
+    grid-column: 1/4;
+    background-color: rgb(0, 93, 170);
+}
+
+.footer ul{
+    display: flex;
+    flex-direction: row;
+}
+
+.footer ul li{
+    margin: 5px;
+    margin-left: 10px;
+    margin-top: 10px;
+    font-size: 22px;
+    color: white;
+    list-style: none;
+    grid-column: 1/4;
+}
+
+.footer .bottom{
+    color: white;
+    margin: 5px;
+    margin-left: 10px;
+    list-style: none;
+    grid-column: 1/4;
+}
+
+.footer ul li a{
+    color: white;
+    text-decoration: none;
+}
+
+.signup{
+    margin-top: 10px;
+    grid-column: 3/4;
+    grid-row: 6/8;
+}
+
+.signup form{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 2fr 1fr;
+}
+
+.signup form input:nth-of-type(1){
+    margin-bottom: 15px;
+    margin-top: 10px;
+}
+
+.signup form label{
+    margin-bottom: 5px;
+}
+
+.signup form input{
+    width: 95%;
+}
+
+.signup form input[type=text]{  
+    padding: 5px;
+}
+
+.signup form textarea[type=text]{
+    padding: 5px;
+}
+
+.signup form .prayer textarea{
+    width: auto;
+    height: 100%;
+    margin-right: 15px;
+}
+
+.signup .prayer{
+    display: flex;
+    flex-direction: column;
+    grid-column: 1/3;
+}
+
+.signup h2{
+    padding-bottom: 10px;
+}
+
+.membership-title h2{
+    margin-top: 10px;
+    margin-left: 15px;
+}
+
+@media(max-width: 850px){
+    .title-image{
+        height: auto;
+        width: 100%;
+    }
+
+    .membership-table img{
+        width: 100%;
+        height: auto;
+    }
+
     .membership-table{
-        flex-direction: column;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr;
+        width: auto;
+        height: 100%;
+    }
+
+    .membership-table .table{
+        width: 100%;
+    }
+
+    .membership-table .gold{
+        grid-column: 1/2;
+        grid-row: 2/3;
     }
 
     .membership-table .executive{
+        grid-column: 1/2;
+        grid-row: 1/2;
         margin-bottom: 20px;
+    }
+
+    .signup{
+        margin-left: 15px;
+        margin-right: 15px;
+    }
+}
+
+@media(max-width: 1500px){
+    .membership-table{
+        grid-column: 1/4;
+    }
+    
+    .signup{
+        margin-left: 15px;
+        margin-right: 15px;
+        grid-column: 1/4;
+        grid-row: 8/9;
     }
 }
