--- a/responsiveWebsite/contact.css
+++ b/responsiveWebsite/contact.css
@@ -115,3 +115,76 @@ hr{
     color: white;
     text-decoration: none;
 }
+
+.container{
+    grid-column: 1/5;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 15px;
+}
+
+.form{
+    background-color: rgb(241, 241, 241);
+    padding: 20px;
+    width: 100%;
+    border-radius: 20px;
+    border: 5px solid rgb(0, 93, 170);
+}
+
+form{
+    font-size: 20px;
+    color: rgb(0, 0, 0);
+}
+
+form .box{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 10px;
+}
+
+form input{
+    width: 70%;
+    height: 100%;
+}
+
+input[type=submit]{
+    min-height: 50px;
+}
+
+label{
+    margin-top: 10px;
+}
+
+textarea{
+    width: 90%;
+    height: 200px;
+}
+
+h4{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    font-size: 40px;
+}
+
+h5{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    font-display: 30px;
+    margin-bottom: 10px;
+}
+
+form input[type=text]{  
+    padding: 5px;
+}
+
+form textarea[type=text]{
+    padding: 5px;
+}
